# esc-greatest-hits-song-parser

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
adapters/: sqlite_client.py  telegram_client.py
core/: settings.py
fixtures/: country_mappings.py
services/: sqlite_service.py  telegram_service.py
