[project]
name = "esc-greatest-hits-song-parser"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "imagehash>=4.3.2",
    "numpy>=2.4.6",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "pytesseract>=0.3.13",
    "yt-dlp[default]>=2026.7.12.233956.dev0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
